conditionals in array

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <article id="box8"></article>
         <article id="box9"></article>
     </section>
+    <section id="announcement"></section>
 
 </body>
 <script src="./tic-tac-toe.js"></script>
