--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
 </head>
 <body>
+    <h1 class = "neonText">Tic Tac Toe</h1>
     <section id="boxes">
         <article id="box1"></article>
         <article id="box2"></article>
@@ -19,6 +20,7 @@
         <article id="box7"></article>
         <article id="box8"></article>
         <article id="box9"></article>
+        <!-- <button type="button" class="btn btn-success">Refresh</button> -->
     </section>
     <section id="announcement"></section>
 
