--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>0</h2>
         </article>
         <article id = "ties">
-            <h4>ties</h4>
+            <h4>Ties</h4>
             <h2>0</h2>
         </article>
     </section>
