--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+    <title>Vincy's Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
 </head>
 <body>
-    <h1 class = "neonText">Tic Tac Toe</h1>
+    <h1>Tic Tac Toe</h1>
     <section id="counters">
         <article id = "p1-wins">
             <h4>p1 wins</h4>
@@ -20,7 +20,7 @@
             <h2>0</h2>
         </article>
         <article id = "ties">
-            <h4>Ties</h4>
+            <h4>ties</h4>
             <h2>0</h2>
         </article>
     </section>
@@ -39,7 +39,7 @@
     <section id="announcement"></section>
     <section id="buttonsContainer">
         <button id="newGameBtn">new game</button>
-        <button id="startOverBtn">start-over</button>
+        <button id="startOverBtn">start over</button>
     </section>
 
 </body>
